# fencing-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 19f9673659b1_create_initial_tables.py
docs/: architecture.md  prd.md  technical_design.md
src/fencing_agent/: main.py
src/fencing_agent/api/v1/: chat.py  sessions.py
src/fencing_agent/clients/: openai.py
src/fencing_agent/core/: config.py  dependencies.py  prompts.py
src/fencing_agent/db/: engine.py  models.py  repositories.py
src/fencing_agent/schemas/: chat.py  sessions.py
src/fencing_agent/services/: agent.py
